--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="public\icon\favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gemini PowerPoint Workbench</title>
   </head>
@@ -11,3 +11,4 @@
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
+.
